--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 parking.csv filter=lfs diff=lfs merge=lfs -text
+stat135/parking.csv filter=lfs diff=lfs merge=lfs -text
+parking2017.csv filter=lfs diff=lfs merge=lfs -text
+stat135/parking2017.csv filter=lfs diff=lfs merge=lfs -text
